app.hello-world/manifest/ingress.yaml
# NOT TO BE APPLIED, JUST AN EXAMPLE ON HOW TO CREATE AN INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: hello-world
  annotations:
    kubernetes.io/ingress.class: "nginx" # or any other ingresses
    cert-manager.io/cluster-issuer: "letsencrypt-staging" # or "letsencrypt-production"
spec:
  tls:
    - hosts:
        - "hello.localhost"
      secretName: kubernetes-dashboard-tls
  rules:
    - host: hello.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
